--- a/project-1/style.css
+++ b/project-1/style.css
@@ -17,10 +17,19 @@ a{
     text-align: center;
 }
 
+.title-numerals {
+    font-size: 150px;
+    letter-spacing: -3px;
+    text-transform: uppercase;
+}
+
 .link{
     text-align: center;
 }
 
+.shift{
+    transform: translateX(-4%);
+}
 
 .bottom-link {
     position: absolute;
@@ -32,26 +41,7 @@ a{
     color: hsl(0, 0%, 0%); /* Example text color */
 }
 
-.center-screen {
-    position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 95vh;
-  background-color: #00d6d6;
-  columns: 100px 2;
-}
 
-.title-numerals {
-    font-size: 150px;
-    letter-spacing: -3px;
-    text-transform: uppercase;
-}
-
-.parent {
-    position: relative;
-}
 
 .flexbox-container {
     display: flex;
@@ -66,20 +56,6 @@ a{
     position: absolute;
     width: 100%;
     height: 90%;
-}
-
-.child {
-    position: fixed;
-    left: 50%; /* Adjust as needed */
-    transform: translateX(-50%); /* Center the link horizontally */
-}
-
-.center-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
 }
 
 .center-text-nav {
