--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a{
     line-height: 80%;
     text-transform: uppercase;
     margin-bottom: -1%;
-    margin-top: -.5%;
+    margin-top: 1%;
     text-align: center;
 }
 
@@ -36,6 +36,7 @@ td, th {
 table{
     margin-left: 20%;
     margin-right: 20%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .selfie {
     max-width: 300%;
@@ -48,7 +49,14 @@ table{
     padding: 0%;
   }
 
+a:visited {
+    color: rgb(0, 187, 31);
+}
 
+a:hover {
+    color: darkred;
+
+}
 
 .row::after {
     content: "";
