--- a/style.css
+++ b/style.css
@@ -1,16 +1,45 @@
-p, h1, h2{
-    font-family: Arial, Helvetica, sans-serif;
+p,
+h2 {
+    color: rgb(255, 255, 255);
+    font-family: "Instrument Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
-a{
-    color: blue;
-    font-family: Arial, Helvetica, sans-serif;
+h1 {
+    color: white;
+    font-family: "Instrument Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+body {
+    background-color: #65bd73;
+}
+
+.text {
+    font-size: larger;
+    letter-spacing: 1.4px;
+    color: rgb(255, 255, 255);
+
+}
+
+a {
+    color: rgb(255, 255, 255);
+    font-family: "Instrument Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .that_feeling {
     max-width: 50%;
     height: auto;
 }
+
 #title {
     font-size: 60px;
     letter-spacing: -3px;
@@ -27,34 +56,23 @@ a{
     text-align: center;
 }
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-
-table{
-    margin-left: 20%;
-    margin-right: 20%;
-    font-family: Arial, Helvetica, sans-serif;
-}
 .selfie {
     max-width: 300%;
     height: auto;
-} 
+}
 
 .column {
     float: left;
     width: 5%;
     padding: 0%;
-  }
+}
 
 a:visited {
-    color: rgb(0, 187, 31);
+    color: #0019B7;
 }
 
 a:hover {
-    color: darkred;
+    color: rgb(0, 255, 8);
 
 }
 
@@ -62,4 +80,110 @@ a:hover {
     content: "";
     clear: both;
     display: table;
-  }
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.project {
+    display: flex;
+    margin-bottom: 20px;
+    flex-direction: row;
+}
+
+.project-box {
+    margin-left: 10px;
+    padding: 1%;
+    width: 40vw;
+    height: 500px;
+}
+
+.project-box img {
+    max-width: 30vw;
+    margin-inline: auto;
+    border: solid #c1c1c1;
+}
+
+.word1 {
+    position: relative;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    letter-spacing: -8px;
+    padding-left: 2%;
+    line-height: -20px;
+    font-family: "Instrument Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+}
+
+.word2 {
+    position: relative;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    letter-spacing: -8px;
+    padding-left: 10%;
+    line-height: .6;
+    font-family: "Instrument Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+
+
+}
+
+h1 {
+    font-size: 200px;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    font-weight: 700;
+}
+
+#header {
+    display: relative;
+    max-height: fit-content;
+}
+
+.subheading {
+    position: relative;
+    width: 250px;
+    padding-left: 10%;
+}
+
+.subheading-move {
+    position: relative;
+    left: 210%;
+}
+
+#icon {
+    position: fixed;
+    top: 10px;
+    right: 100px;
+}
+
+@media screen and (max-width: 768px) {
+    .project-box {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 130px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    h1 {
+        font-size: 90px;
+    }
+}
